# learning-fastapi

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
learning_fastapi/: main.py
